2005-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-setup-toolbar): Make sure icon files exist.
	(w3m-update-toolbar): Make sure toolbar items have been specified.
	(w3m-initialize-graphic-icons): Make sure icon files exist.

	* w3m-e21.el (w3m-setup-toolbar): Make sure icon files exist.
	(w3m-initialize-graphic-icons): Ditto.

2005-03-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (tarball): Remove `w3m-e23.el' instead of
	`w3m-e22.el'.

	* w3m.el (w3m-url-readable-string): Decide a scheme to guess
	encodings based on the target URL, instead of the current URL.
	(w3m-show-decoded-url): Doc fix to follow the above change.
	(w3m-copy-buffer): Do not set `w3m-current-url' and
	`w3m-current-coding-system'.
	(w3m-goto-url-new-session): Simplified.

	* shimbun/nnshimbun.el (nnshimbun-parse-nov): Remove redundant
	`function'.

2005-03-22  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-yahoo-auctions.el (shimbun-yahoo-auctions-content-start)
	(shimbun-yahoo-auctions-content-end): Follow the change of the
	site design.
	(shimbun-get-headers): Reverse the order of the return value.
	(shimbun-article-url): New overridden method.
	(shimbun-make-contents): Ditto.

2005-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-fau.el (shimbun-article): Fix the class name.
	Suggested by ARISAWA Akihiro <ari@mbf.sphere.ne.jp>.

2005-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (display-images-p): Remove alias.

	* shimbun/sb-fau.el (shimbun-article): New overriding method to
	decode article contents according to shimbun-fau-coding-system.

2005-03-22  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-fau.el (shimbun-fau-coding-system): New variable.

	* shimbun/shimbun.el (shimbun-find-coding-system): Alias to
	w3m-find-coding-system.

2005-03-21  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-heise.el (shimbun-heise-get-telepolis-headers):
	Fixed broken message id.
