@@ -1,3 +1,10 @@
+2005-03-23  Andreas Seltenreich  <seltenreich@gmx.de>
+
+	* shimbun/sb-zeit-de.el (shimbun-zeit-de-content-end): Don't match
+	on advertisements.
+	(shimbun-clear-contents): Added to get rid of webbugs and
+	advertisements.
+
 2005-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-xmas.el (w3m-setup-toolbar): Make sure icon files exist.
